CostalCloud/force-app/main/default/objects/Installers_Available__c.object
<CustomObject>
    <label>Installers Available</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installers Available</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>