CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Installer_Account__c.field-meta.xml
<CustomField>
    <fullName>Installer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Installer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Stores</relationshipLabel>
    <relationshipName>Resource_Backup1</relationshipName>
    <type>Lookup</type>
</CustomField>