CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Installer_Status__c.field-meta.xml
<CustomField>
    <fullName>Installer_Status__c</fullName>
    <formula>TEXT(Installer_Account__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Status</label>
    <type>Text</type>
</CustomField>