CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Installers_Available_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Installers_Available_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installers Available ID (18)</label>
    <type>Text</type>
</CustomField>