CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>xJob Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>