CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>