CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <formula>Store_Account__r.Store__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store #</label>
    <type>Text</type>
</CustomField>