CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <label>Store Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only existing Clients can be selected.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installers Available</relationshipLabel>
    <relationshipName>Resource_Backup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>