CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Store_Account__r.Name</formula>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>