CostalCloud/force-app/main/default/objects/Installers_Available__c/fields/SvcTypeCode__c.field-meta.xml
<CustomField>
    <fullName>SvcTypeCode__c</fullName>
    <label>SvcTypeCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>