CostalCloud/force-app/main/default/objects/Installers_Available__c/validationRules/Type_cannot_be_greater_than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_cannot_be_greater_than_100</fullName>
    <active>true</active>
    <errorConditionFormula>Percent__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>Percent__c</errorDisplayField>
    <errorMessage>Cannot select a percentage greater than 100%</errorMessage>
</ValidationRule>