CostalCloud/force-app/main/default/objects/Installers_Available__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Installer_Account__c</columns>
    <columns>Store_Account__c</columns>
    <columns>Percent__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>